Issue #3218194: Style the RTL Layout Builder for the Alignment

--- a/css/theme/plugins/vertical-alignment.css
+++ b/css/theme/plugins/vertical-alignment.css
@@ -1,6 +1,6 @@
 #drupal-off-canvas .field-vertical-alignment .fieldset-wrapper > div > div input + label,
 #layout-builder-modal .field-vertical-alignment .fieldset-wrapper > div > div input + label {
-  height: 50px;
+  height: 40px;
   text-indent: -999em;
   font-size: 0;
 }
